project/BasicProject/k8s-basicproject-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-project-backend
spec:
  type: LoadBalancer
  selector:
    app: basic-project-backend
  ports:
    - name: http
      port: 8086
      protocol: TCP
      targetPort: 8086

---
apiVersion: apps/v1
kind : Deployment
metadata:
  name: basic-project-backend
spec:
  replicas: 0
  selector:
    matchLabels:
      app: basic-project-backend
  template:
    metadata:
      labels:
        app: basic-project-backend
    spec:
      containers:
        - name: basic-project
          image: basic_project:v1
          ports:
            - containerPort: 8086
