project/BasicProject/k8s-basicproject-mysql.yaml
# 定义资源的版本和类型
apiVersion: v1
# 定义资源的类型
kind: Service
# 定义资源的名称
metadata:
  name: basic-project-mysql
# 定义资源的规格、内容
spec:
  type: LoadBalancer
  # 定义端口
  ports:
    # 服务的端口号
    - port: 3309
      # 名称
      name: mysql
      # 服务的协议，通常是TCP
      protocol: TCP
      # Pod上的目标端口
      targetPort: 3306
  # selector 定义了哪些Pod可以被此Server访问，通常是通过标签选择器实现的
  selector:
    app: basic-project-mysql

---
# 定义资源的版本
apiVersion: apps/v1
# 定义资源的类型
kind: Deployment
# 定义资源的名称和标签
metadata:
  name: basic-project-mysql
# 定义资源的规格
spec:
  # 定义那些Pod可以被Deployment管理
  replicas: 0
  selector:
    matchLabels:
      app: basic-project-mysql
  template:
    metadata:
      labels:
        app: basic-project-mysql
    spec:
      containers:
        - name: mysql-8
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-storage
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: basic-project-mysql-pv-claim
