project/BasicProject/k8s-basicproject.yaml
apiVersion: v1
kind: Service
metadata:
  name: basic-project
spec:
  type: LoadBalancer
  selector:
    app: basic-project
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8081

---
apiVersion: apps/v1
kind : Deployment
metadata:
  name: basic-project
spec:
  replicas: 0
  selector:
    matchLabels:
      app: basic-project
  template:
    metadata:
      labels:
        app: basic-project
    spec:
      containers:
        - name: basic-project
          image: basic_project:v1
          ports:
            - containerPort: 8081
