project/BasicProject/k8s-basicproject-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: basic-project
                port:
                  number: 8085
